syntax = "proto3";

package user;

option go_package = "github.com/redgosho/grpc-go-user-crud/userpb";

service UserService {
  rpc CreateUser (CreateUserRequest) returns (CreateUserResponse);
  rpc GetUser (GetUserRequest) returns (GetUserResponse);
  rpc GetAllUsers (GetAllUsersRequest) returns (GetAllUsersResponse);
  rpc UpdateUser (UpdateUserRequest) returns (UpdateUserResponse);
  rpc DeleteUser (DeleteUserRequest) returns (DeleteUserResponse);
}

message CreateUserRequest {
  string name = 1;
  string email = 2;
}

message CreateUserResponse {
  int64 id = 1;
}

message GetUserRequest {
  int64 id = 1;
}

message GetUserResponse {
  User user = 1;
}

message GetAllUsersRequest {
}

message GetAllUsersResponse {
  repeated User users = 1;
}

message UpdateUserRequest {
  int64 id = 1;
  string name = 2;
  string email = 3;
}

message UpdateUserResponse {
}

message DeleteUserRequest {
  int64 id = 1;
}

message DeleteUserResponse {
}

message User {
  int64 id = 1;
  string name = 2;
  string email = 3;
}
